spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_traits_with_ambiguous_methods.snap
---
source: spade-tests/src/integration.rs
---
trait A {
    fn method(self);
}
trait B {
    fn method(self);
}

fn test<T>(x: T)
    where T: A + B
{
    x.method()
}


error: Multiple traits have a method `method` 
   ┌─ testinput:11:5
   │
11 │     x.method()
   │     ^^^^^^^^^^
   │     │
   │     Ambiguous method call
   │     This has type A + B
   │
   = note: The method `method` exists on all these traits: A and B
